create info/searh components

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,9 @@
 body {
   margin: 0;
   overflow: hidden;
-  background: black;
-  position: absolute;
-  right: 5vw;
+
+  -webkit-user-select: none; /* Для Safari */
+  -moz-user-select: none; /* Для Firefox */
+  -ms-user-select: none; /* Для старых версий IE/Edge */
+  user-select: none; /* Стандартное свойство */
 }
